# CppCMakeTempalate

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  ibuild
source/: main.cpp
